--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -6,12 +6,14 @@
                 <img src="/images/logo.png" alt="Logo">
             </a>
         </div>
-
+        
+        <!-- 로고 타이틀 -->
+        <a href="/" class="logoTitle">
+            P&nbsp;&nbsp;H&nbsp;&nbsp;A&nbsp;&nbsp;N&nbsp;&nbsp;T&nbsp;&nbsp;O&nbsp;&nbsp;M&nbsp;&nbsp;B&nbsp;&nbsp;O&nbsp;&nbsp;O&nbsp;&nbsp;K&nbsp;&nbsp;S
+        </a>
+        
         <!-- 검색 바 -->
         <div class="search-bar">
-            <a href="/" class="logoTitle">
-                P&nbsp;&nbsp;H&nbsp;&nbsp;A&nbsp;&nbsp;N&nbsp;&nbsp;T&nbsp;&nbsp;O&nbsp;&nbsp;M&nbsp;&nbsp;B&nbsp;&nbsp;O&nbsp;&nbsp;O&nbsp;&nbsp;K&nbsp;&nbsp;S<br><br><br>
-            </a>
             <form action="/searchBookPage/searchBooks" method="get">
                 <input type="text" name="searchTitle" placeholder="검색어를 입력하세요" th:value="${param.searchTitle ?: ''}" />
                 <button type="submit">Search</button>
@@ -20,6 +22,7 @@
                 <input type="hidden" name="sortOption" id="hiddenSearchOption">
             </form>
         </div>
+        
 
         <!-- 사용자 메뉴 -->
         <div class="user-menu">
