--- a/src/main/resources/templates/customer/query.html
+++ b/src/main/resources/templates/customer/query.html
@@ -5,71 +5,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1:1 문의</title>
-  <link rel="stylesheet" href="/css/main/query.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/customer/query.css">
   <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header th:replace="~{common/common}"></header>
-  <div th:replace="~{common/side-menu}"></div>
 
-  <main>
-    <section class="content-box">
-      <div class="container">
-        <div class="query-container">
-          <div class="query-form">
-            <h1>1:1 문의</h1>
-            <hr><br><br><br>
+  <main class="queryContainer">
 
-            <!-- Main Form Start -->
-            <form method="post" action="/customer/query/submit" id="myForm" classname="myForm">
-              <div class="form-group">
-                <label for="menu">
-                  <h4>문의유형</h4>
-                </label>
-                <select class="form-control" id="subject" name="menu">
-                  <option value="1">유형 선택</option>
-                  <option value="2">주문관련</option>
-                  <option value="3">배송관련</option>
-                  <option value="4">취소/환불</option>
-                  <option value="5">기타문의</option>
-                </select>
-              </div>
-              <br>
+    <div th:replace="~{common/side-menu}"></div>
 
-              <label for="title">
-                <h4>제목</h4>
-              </label>
-              <input type="text" class="form-control2" id="title" name="title" required>
+    <div class="mainContent">
+      <h2 class="title">1:1 문의</h2>
 
-              <div class="form-group">
-                <br>
-                <label for="content">
-                  <h4>내용</h4>
-                </label>
-                <div id="editor-container" style="height: 300px;"></div>
 
-                <!-- Hidden Textarea for Quill Content -->
-                <textarea id="content" name="content" style="display: none;"></textarea>
-              </div>
-              <br><br>
-              <button type="button" class="btn btn-primary" id="queryBtn">작성하기</button>
-            </form>
-            <!-- Main Form End -->
 
+      <div class="query-form">
+
+        <form method="post" action="/customer/query/submit" id="myForm" classname="myForm">
+          <div class="form-group">
+            <br>
+            
+            <div class="sort-dropdown">
+              <select class="form-control" id="subject" name="menu">
+                <option value="1">유형을 선택해 주세요</option>
+                <option value="2">주문관련</option>
+                <option value="3">배송관련</option>
+                <option value="4">취소/환불</option>
+                <option value="5">기타문의</option>
+              </select>
+            </div>
           </div>
-        </div>
+          
+          <input type="text" class="form-control2" id="title" name="title" required placeholder="제목을 입력해 주세요.">
+          
+          <div class="form-group">
+            <br>
+            
+            <div id="editor-container" style="height: 300px;"></div>
+            
+            <textarea id="content" name="content" style="display: none;" placeholder="내용을 입력해 주세요."></textarea>
+          </div>
+          
+          <button type="button" class="btn btn-primary" id="queryBtn">작성하기</button>
+        </form>
+
       </div>
-    </section>
+    </div>
   </main>
-  <script src="/js/customer/query.js"></script>
-  <!-- 푸터 조각 삽입 -->
+
   <footer th:replace="~{common/footer :: footer}"></footer>
+
+  <script src="/js/customer/query.js"></script>
 
   <script>
     // Quill 에디터 초기화
-    var quill = new Quill('#editor-container', { 
+    var quill = new Quill('#editor-container', {
       theme: 'snow',
       modules: {
         toolbar: [
@@ -83,7 +77,7 @@
     });
   </script>
 
-  
+
 </body>
 
 </html>
