--- a/src/main/resources/static/css/searchBookPage/searchBook.css
+++ b/src/main/resources/static/css/searchBookPage/searchBook.css
@@ -259,3 +259,36 @@ a {
   opacity: 0.5; /* 흐려짐 효과 */
   cursor: default;
 }
+/* 페이지 네이션 버튼 스타일  */
+
+/* 별점 스타일  */
+/* 별점 전체 컨테이너 */
+.star-ratings {
+  position: relative;
+  display: inline-block;
+  font-size: 2rem; /* 별 크기 */
+  line-height: 1; /* 별 간격 */
+  color: #ccc; /* 기본 별 색상 */
+  width: 5em; /* 별 5개 공간 */
+  overflow: hidden;
+}
+
+/* 채워진 별 */
+.star-ratings-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  color: gold; /* 채워진 별 색상 */
+}
+
+/* 빈 별 */
+.star-ratings-base {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  color: #ccc; /* 빈 별 색상 */
+}
+
+/* 별점 스타일  */
