--- a/src/main/resources/templates/customer/noticeDetail.html
+++ b/src/main/resources/templates/customer/noticeDetail.html
@@ -3,57 +3,50 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>게시판 이름</title>
-
   <link rel="stylesheet" href="/css/customer/noticeDetail.css">
-
+  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <th:block th:replace="~{common/common}"></th:block>
-  <th:block th:replace="~{common/side-menu}"></th:block>
-  <main>
+  <div th:replace="~{common/common}"></div>
 
-    <section class="notice-detail" th:object="${notice}">
-      <!-- 제목 -->
-      <h1 class="notice-title" th:text="*{title}">게시글 제목</h1>
+  <main class="noticeDetailContainer">
+    <div th:replace="~{common/side-menu}"></div>
 
-      <!-- 프로필 + 닉네임 + 작성일 + 조회수 -->
-      <div class="notice-header">
-        <div class="notice-writer">
+    <div class="mainContent">
+      <section class="notice-detail" th:object="${notice}">
+        <!-- 제목 -->
+        <h2 class="notice-title" th:text="*{title}">게시글 제목</h2>
 
-          <div class="notice-info">
-            <p>
-              <span>작성일</span>
-              <th:block th:text="*{createDate}"></th:block>
-            </p>
-
-            <p>
-              <span>조회수</span>
-              <th:block th:text="*{view}"></th:block>
-            </p>
-          </div>
+        <!-- 작성일 + 조회수 -->
+        <div class="notice-header">
+          <p>
+            <span>작성일:</span>
+            <th:block th:text="*{createDate}">2024-11-21</th:block>
+          </p>
+          <p>
+            <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;조회수:</span>
+            <th:block th:text="*{view}">2147483647</th:block>
+          </p>
         </div>
 
         <!-- 내용 -->
-        <div class="notice-content" th:text="*{content}">내용</div>
+        <div class="notice-content" th:text="*{content}">
+          공지사항 내용이 여기에 표시됩니다.
+        </div>
 
-        <!-- 버튼 영역-->
+        <!-- 버튼 영역 -->
         <div class="notice-btn-area">
           <button id="goToListBtn">목록으로</button>
         </div>
-
-    </section>
-
-
+      </section>
+    </div>
   </main>
-
 
   <th:block th:replace="~{common/footer}"></th:block>
   <script src="/js/customer/noticeDetail.js"></script>
-
 </body>
 
 </html>
