chatting 기능 만들 준ㅂㅣ 완료

--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -45,9 +45,10 @@
   
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        채팅방
+        <button id="openPopup">채팅방</button>
       </div>
     </div>
+    <header th:replace="~{admin/adminChatting}"></header>
 
   </section>
   <main>
