--- a/src/main/resources/static/css/searchBookPage/bookDetail.css
+++ b/src/main/resources/static/css/searchBookPage/bookDetail.css
@@ -520,11 +520,30 @@ h1 {
 /* 리뷰 작성부분 css 끝 */
 
 /*  별점 Css */
-.star-ratings i {
-  font-size: 2rem; /* 별 크기 */
-  margin-right: 0.1rem; /* 별 간격 */
-  transition: opacity 0.3s; /* 부드러운 전환 효과 */
+.star-ratings {
+  color: #aaa9a9; 
+  position: relative;
+  unicode-bidi: bidi-override;
+  width: max-content;
+  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1.3px;
+  -webkit-text-stroke-color: #2b2a29;
 }
 
+.star-ratings-fill {
+  color: #fff58c;
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  -webkit-text-fill-color: gold;
+}
 
+.star-ratings-base {
+  z-index: 0;
+  padding: 0;
+}
 /*  별점 Css */
