--- a/src/main/resources/templates/myPage/checkPw.html
+++ b/src/main/resources/templates/myPage/checkPw.html
@@ -26,7 +26,7 @@
                                 <form id="checkPwForm" class="needs-validation mx-auto" style="max-width: 400px;">
                                     <div class="mb-3">
                                         <label for="memberPw" class="form-label">비밀번호를 입력해주세요</label>
-                                        <input type="password" class="form-control" id="memberPw" required>
+                                        <input type="password" class="form-control" id="memberPw" required autocomplete="off">
                                     </div>
                                     <button type="submit" class="btn btn-primary w-100">확인</button>
                                 </form>
